vote/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: vote
